--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,11 @@ body {
   font-family: "Verdana"
 }
 
+.game-intro .score span{
+  margin-top: 20px;
+  font-size: 54px;
+}
+
 .logo-img {
   width: 350px;
 }
